# dxx-vr

./: .gitignore  README.md  bench_alloc.c
.github/workflows/: package-all.yml  package-linux.yml  package-macos-arm.yml  package-macos.yml  package-msvc.yml  package-windows.yml
build_d1/: CMakeCache.txt  Makefile  cmake_install.cmake
build_d1/2d/: Makefile  cmake_install.cmake
build_d1/3d/: Makefile  cmake_install.cmake
build_d1/iff/: Makefile  cmake_install.cmake
build_d1/main/: Makefile  cmake_install.cmake
build_d1/maths/: Makefile  cmake_install.cmake
build_d1/mem/: Makefile  cmake_install.cmake
build_d1/misc/: Makefile  cmake_install.cmake
build_d1/texmap/: Makefile  cmake_install.cmake
build_d1/xmodel/: Makefile  cmake_install.cmake
cmake/: FindOpenVR.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake
d1/: CMakeLists.txt
d1/2d/: CMakeLists.txt
d1/3d/: CMakeLists.txt
d1/include/: ogl_init.h  pstypes.h  vr_openvr.h
d1/main/: CMakeLists.txt  automap.c  config.c  config.h  console.c  game.c  gamecntl.c  gamerend.c  gauges.c  gauges.h  hud.c  inferno.c  kconfig.c  laser.c  menu.c  multi.c  multi.h  net_udp.c  newmenu.c  object.c  render.c  vr_openvr.cpp
d1/misc/: CMakeLists.txt  args.c
d1/texmap/: CMakeLists.txt
d1/ui/: CMakeLists.txt  menubar.c
d1/xmodel/: CMakeLists.txt
d2/: CMakeLists.txt  vcpkg.json
d2/2d/: CMakeLists.txt  canvas.c
d2/3d/: CMakeLists.txt
d2/editor/: CMakeLists.txt  group.c  kgame.c
d2/iff/: CMakeLists.txt
d2/include/: loadgl.h  ogl_init.h  physfsrwops.h  pstypes.h  vr_openvr.h
d2/libmve/: CMakeLists.txt  decoder16.c  decoder8.c  decoders.h  mve_main.c  mveplay.c
d2/main/: CMakeLists.txt  automap.c  config.c  config.h  console.c  controls.c  game.c  gamecntl.c  gamerend.c  gameseq.c  gauges.c  gauges.h  hud.c  inferno.c  kconfig.c  laser.c  menu.c  movie.c  movie.h  multi.c  multi.h  newmenu.c  newmenu.h  object.c  polyobj.c  render.c  render.h  switch.c  (+3 more)
(+44 files in other folders)
